# cellgenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
cellgenerator/: __init__.py
cellgenerator/image/: _image.py
cellgenerator/mask/: __init__.py  _abcmask.py  _circle_mask.py  _ellipse_mask.py
cellgenerator/noise/: __init__.py  _abcnoise.py  _const_noise.py
cellgenerator/stain/: __init__.py  _abcstain.py  _constant_stain.py  _spatial_stain.py
